RESOLVED FIXED194601
REGRESSION: [ iOS ] Layout Test editing/input/ios/rtl-keyboard-input-on-focus.html is a Timeout
https://bugs.webkit.org/show_bug.cgi?id=194601
Summary REGRESSION: [ iOS ] Layout Test editing/input/ios/rtl-keyboard-input-on-focus...
Truitt Savell
Reported 2019-02-13 11:09:20 PST
The following layout test is Timing out on iOS editing/input/ios/rtl-keyboard-input-on-focus.html Probable cause: This test began timing out constantly around r241308. Unable to reproduce locally. Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=editing%2Finput%2Fios%2Frtl-keyboard-input-on-focus.html
Attachments
Patch (9.43 KB, patch)
2019-02-19 20:48 PST, Wenson Hsieh
no flags
Patch (11.25 KB, patch)
2019-02-20 13:22 PST, Wenson Hsieh
thorton: review+
Patch for landing (11.45 KB, patch)
2019-02-20 14:57 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-02-14 07:31:25 PST
*** Bug 194650 has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 2 2019-02-14 07:34:35 PST
Wenson Hsieh
Comment 3 2019-02-14 08:06:04 PST
(In reply to Wenson Hsieh from comment #2) > Failure appears to be in this range: > https://trac.webkit.org/log/webkit/?stop_rev=241285&rev=241317&limit=1000 A large number of tests in editing/selection/ios (which are run only on Apple-internal bots) also began failing at around this range; these might be related.
Tim Horton
Comment 4 2019-02-14 10:47:06 PST
Wenson Hsieh
Comment 5 2019-02-14 10:48:18 PST
(In reply to Tim Horton from comment #4) > SURELY it's https://trac.webkit.org/changeset/241311/webkit My thoughts too :/ That being said, I haven't dug into it quite yet to see why.
Radar WebKit Bug Importer
Comment 6 2019-02-14 11:06:51 PST
Wenson Hsieh
Comment 7 2019-02-19 20:48:55 PST
Wenson Hsieh
Comment 8 2019-02-19 20:49:28 PST
> cleanUpAfterActivityStateChangeDueToBecomingFirstResponder ...definitely taking better suggestions :|
Wenson Hsieh
Comment 9 2019-02-20 13:22:02 PST
Tim Horton
Comment 10 2019-02-20 14:42:59 PST
Comment on attachment 362531 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362531&action=review > Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.mm:514 > + for (const auto& callbackID : callbackIDs) > + m_webPage.send(Messages::WebPageProxy::VoidCallback(callbackID)); These are going to beat the transaction, which seems bad (maybe not in this case, but for people expecting the callbacks to mean what they mean in the non-UI-side world).
Wenson Hsieh
Comment 11 2019-02-20 14:50:50 PST
(In reply to Tim Horton from comment #10) > Comment on attachment 362531 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=362531&action=review > > > Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.mm:514 > > + for (const auto& callbackID : callbackIDs) > > + m_webPage.send(Messages::WebPageProxy::VoidCallback(callbackID)); > > These are going to beat the transaction, which seems bad (maybe not in this > case, but for people expecting the callbacks to mean what they mean in the > non-UI-side world). Fair point! As we discussed on IRC, this is OK for now, but might need to be adjusted in the future for UI-side compositing on macOS. I'll leave a FIXME for this.
Wenson Hsieh
Comment 12 2019-02-20 14:57:18 PST
Created attachment 362548 [details] Patch for landing
WebKit Commit Bot
Comment 13 2019-02-20 15:34:55 PST
Comment on attachment 362548 [details] Patch for landing Clearing flags on attachment: 362548 Committed r241846: <https://trac.webkit.org/changeset/241846>
Note You need to log in before you can comment on or make changes to this bug.